--- a/denro-app/package.json
+++ b/denro-app/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@rnmapbox/maps": "^10.1.42",
     "@supabase/supabase-js": "^2.57.4",
+    "@types/qrcode": "^1.5.5",
     "base64-arraybuffer": "^1.0.2",
     "dotenv": "^17.2.1",
     "expo": "53.0.22",
@@ -40,9 +41,11 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
+    "qrcode": "^1.5.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-blob-util": "^0.22.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
@@ -50,6 +53,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-signature-canvas": "^5.0.1",
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-view-shot": "4.0.3",
